# chrds

./: CMakeLists.txt
include/: chrds.hpp
tests/: CMakeLists.txt  test_midi.cpp
